--- a/kms_custom.libraries.yml
+++ b/kms_custom.libraries.yml
@@ -1,11 +1,6 @@
-# Package info
-name: "KMS: custom extensions"
-description: "KMS Module to extend the Drupal contrib functions"
-type: module
-core: 8.x
-package: custom
-
-dependencies:
-  - drupal:block
-  - drupal:node
-  - drupal:path
+similarWorks:
+  version: 1.x
+  js:
+    js/similarWorks.js: {}
+  dependencies:
+    - core/jquery
